--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@ coverage.*
 *.coverprofile
 profile.cov
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Dependency directories
+vendor/
 
 # Go workspace file
 go.work
@@ -28,5 +28,70 @@ go.work.sum
 .env
 
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.npm
+.eslintcache
+.node_repl_history
+*.tgz
+*.tar.gz
+
+# Docker
+.dockerignore
+Dockerfile.prod
+docker-compose.override.yml
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Environment files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build
+dist/
+build/
+web/dist/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Development
+.air/
+tmp/
+.tmp/
+
+# Security
+*.pem
+*.key
+*.crt
+*.p12
+
+# Local development
+.env.dev
+.env.development
+docker-compose.dev.yml
+
+# Go binary
+main
+coscribe
+server
