--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,10 +2,10 @@ FROM golang:1.22-alpine AS builder
 
 WORKDIR /app
 
-COPY . .
-
-RUN go mod tidy
+COPY go.mod go.sum ./
 RUN go mod download
+
+COPY . .
 
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main cmd/server/main.go
 
